--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "http://yochayp.github.io/powerlink-task",
   "name": "ppl-finder",
   "version": "1.0.7",
   "bin": "./bin/cli.js",
@@ -23,8 +22,6 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -49,7 +46,6 @@
     ]
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
-    "gh-pages": "^4.0.0"
+    "babel-eslint": "^10.1.0"
   }
 }
